@@ -11,6 +11,7 @@
 	- remove support for Travis bulids
 	- removes log/blk/btt support from pmempool
 	- removes log/blk support from pmemwrite
+	- removes log/blk support from pmemspoil
 	- ...
 
 Wed May 31 2023 Oksana Sałyk <oksana.salyk@intel.com>
